k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: meta-web-three
  labels:
    name: meta-web-three
